force-app/main/default/objects/Membership_Agreement__c/Membership_Agreement__c.object-meta.xml
<CustomObject>
    <label>Membership Agreement</label>
    <nameField>
        <label>Membership Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Agreement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>