force-app/main/default/objects/Membership_Agreement__c/fields/Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee__c</fullName>
    <label>Annual Fee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$149.00</fullName>
            </value>
            <value>
                <fullName>$199.00</fullName>
            </value>
            <value>
                <fullName>$99.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>