force-app/main/default/objects/Membership_Agreement__c/fields/Annual_Fee_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee_Date__c</fullName>
    <label>Annual Fee Date</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>