force-app/main/default/objects/Membership_Agreement__c/fields/Bank_Account_Amex_EXP_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Amex_EXP_Date__c</fullName>
    <label>Bank Account/Amex EXP. Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>