force-app/main/default/objects/Membership_Agreement__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Membership Agreement</relationshipLabel>
    <relationshipName>Membership_Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>