force-app/main/default/objects/Membership_Agreement__c/fields/cosigner_Acknowledgment_Date__c.field-meta.xml
<CustomField>
    <fullName>cosigner_Acknowledgment_Date__c</fullName>
    <label>cosigner Acknowledgment Date</label>
    <type>Date</type>
</CustomField>