force-app/main/default/objects/Membership_Agreement__c/fields/Cosigner_Acknowledgment_Parent__c.field-meta.xml
<CustomField>
    <fullName>Cosigner_Acknowledgment_Parent__c</fullName>
    <label>Cosigner Acknowledgment Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>