force-app/main/default/objects/Membership_Agreement__c/fields/Cosigner_Acknowledgment_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Cosigner_Acknowledgment_Patient_Name__c</fullName>
    <label>Cosigner Acknowledgment Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>