force-app/main/default/objects/Membership_Agreement__c/fields/Cosigner_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Cosigner_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Parent/Guardian: In exchange for CMS allowing my minor child to purchase a membership, I agree to the release of Liability and assumption of risk clauses in this agreement and I agree to defend and indemnify CMS to the fullest extent permitted by the law for any claim brought by my minor child against CMS. I also promise to pay any financial obligation that my minor child does not pay for any reason and acknowledge that the banking information above is my account.</description>
    <label>Cosigner Authorization</label>
    <type>Checkbox</type>
</CustomField>