force-app/main/default/objects/Membership_Agreement__c/fields/Cosigner_Information_Address__c.field-meta.xml
<CustomField>
    <fullName>Cosigner_Information_Address__c</fullName>
    <label>Cosigner Information Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>