force-app/main/default/objects/Membership_Agreement__c/fields/Financial_Cosigner__c.field-meta.xml
<CustomField>
    <fullName>Financial_Cosigner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Cosigner</label>
    <type>Checkbox</type>
</CustomField>