force-app/main/default/objects/Membership_Agreement__c/fields/Member_Account_Information_Routing_Amex__c.field-meta.xml
<CustomField>
    <fullName>Member_Account_Information_Routing_Amex__c</fullName>
    <label>Member Account Information Routing/Amex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>