force-app/main/default/objects/Membership_Agreement__c/fields/Member_Information_Name_On_Account__c.field-meta.xml
<CustomField>
    <fullName>Member_Information_Name_On_Account__c</fullName>
    <label>Member Information Name On Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>