force-app/main/default/objects/Membership_Agreement__c/fields/Member_patient_Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_patient_Acknowledgement_Date__c</fullName>
    <label>Member Acc patient Acknowledgement Date</label>
    <type>Date</type>
</CustomField>