force-app/main/default/objects/Membership_Agreement__c/fields/Member_Payment_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Payment_Patient_Name__c</fullName>
    <label>Member Payment Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>