force-app/main/default/objects/Membership_Agreement__c/fields/Member_Policies_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Policies_Date__c</fullName>
    <label>Member Policies Date</label>
    <type>Date</type>
</CustomField>