force-app/main/default/objects/Membership_Agreement__c/fields/Membership_Payment_Mamber_Intials__c.field-meta.xml
<CustomField>
    <fullName>Membership_Payment_Mamber_Intials__c</fullName>
    <label>Membership Payment Mamber Intials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>