force-app/main/default/objects/Membership_Agreement__c/fields/Membership_Payment_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Membership_Payment_Monthly_Amount__c</fullName>
    <label>Membership Payment Monthly Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>