force-app/main/default/objects/Membership_Agreement__c/fields/Messaging_2__c.field-meta.xml
<CustomField>
    <fullName>Messaging_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Messaging 2</label>
    <type>Checkbox</type>
</CustomField>