force-app/main/default/objects/Membership_Agreement__c/fields/Messaging_3__c.field-meta.xml
<CustomField>
    <fullName>Messaging_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Messaging 3</label>
    <type>Checkbox</type>
</CustomField>