force-app/main/default/objects/Membership_Agreement__c/fields/Release_of_Lability_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_of_Lability_Date__c</fullName>
    <label>Release of Lability Date</label>
    <type>Date</type>
</CustomField>