force-app/main/default/objects/Membership_Agreement__c/fields/Release_of_Lability_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_of_Lability_Patient_Name__c</fullName>
    <label>Release of Lability Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>